- Groundwork for ordering on the go

--- a/app/src/main/res/layout/content_menu_bubble_tea.xml
+++ b/app/src/main/res/layout/content_menu_bubble_tea.xml
@@ -60,7 +60,7 @@
         <Button
             android:id="@+id/almond_bubble_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:text="Almond"
@@ -69,11 +69,12 @@
             android:textSize="20sp"
             android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/banana_bubble_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Banana"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -81,11 +82,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/almond_bubble_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/blueberry_bubble_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Blueberry"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -93,11 +95,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/banana_bubble_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/chocolate_bubble_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Chocolate"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -105,11 +108,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/blueberry_bubble_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/coconut_bubble_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Coconut"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -117,11 +121,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/chocolate_bubble_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/honeydew_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Honeydew"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -129,11 +134,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/coconut_bubble_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/jasmine_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Jasmine"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -141,11 +147,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/honeydew_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/mango_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Mango"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -153,11 +160,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/jasmine_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/milk_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Milk Tea"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -165,11 +173,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/mango_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/papaya_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Papaya"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -177,11 +186,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/milk_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/red_bean_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Red Bean"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -189,11 +199,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/papaya_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/strawberry_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Strawberry"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -201,11 +212,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/red_bean_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/taro_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Taro"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -213,11 +225,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/strawberry_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/thai_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Thai"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -225,11 +238,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/taro_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/watermelon_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Watermelon"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -237,6 +251,7 @@
             android:layout_height="70dp"
             android:layout_below="@+id/thai_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectCreamySize"
             android:stateListAnimator="@null" />
 
         <TextView
@@ -254,7 +269,7 @@
         <Button
             android:id="@+id/kumquat_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Kumquat"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -262,11 +277,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/bubble_juice_submenu_text"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/pina_colada_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Pina Colada"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -274,11 +290,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/kumquat_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/margarita_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Margarita"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -286,11 +303,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/pina_colada_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/lemon_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Lemon"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -298,11 +316,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/margarita_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/lychee_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Lychee"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -310,11 +329,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/lemon_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/mango_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Mango"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -322,11 +342,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/lychee_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/mint_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Mint"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -334,11 +355,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/mango_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/orange_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Orange"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -346,11 +368,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/mint_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/passionfruit_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Passionfruit"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -358,11 +381,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/orange_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/peach_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Peach"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -370,11 +394,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/passionfruit_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/pomegranate_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Pomegranate"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -382,11 +407,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/peach_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/pineapple_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Pineapple"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -394,11 +420,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/pomegranate_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/strawberry_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Strawberry"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -406,11 +433,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/pineapple_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
         <Button
             android:id="@+id/yogurt_juice_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Yogurt"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -418,6 +446,7 @@
             android:layout_height="70dp"
             android:layout_below="@+id/strawberry_juice_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectJuiceSize"
             android:stateListAnimator="@null" />
 
     </android.widget.RelativeLayout>
