--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -85,5 +85,20 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="40dp"
             android:layout_centerHorizontal="true" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:padding="5dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/menu_text"
+            android:layout_marginEnd="25dp"
+            android:text="Cart"
+            android:onClick="viewCart"
+            android:background="@color/black"
+            android:textColor="@color/white"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="25dp" />
     </android.widget.RelativeLayout>
 </ScrollView>
