--- a/app/src/main/res/layout/content_menu_brewed_tea.xml
+++ b/app/src/main/res/layout/content_menu_brewed_tea.xml
@@ -48,7 +48,7 @@
         <Button
             android:id="@+id/english_breakfast_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@id/small_large_prices_brewed_teas_text"
@@ -57,10 +57,11 @@
             android:textSize="20sp"
             android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/wild_rasberry_hibiscus_brewed_tea_button"
-            android:clickable="false"
+            android:clickable="true"
             android:background="@color/colorBasic"
             android:text="Wild Raspberry Hibiscus"
             android:textAlignment="center"
@@ -69,11 +70,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/english_breakfast_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/pomegranate_raspberry_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Pomegranate Raspberry"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -81,11 +83,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/wild_rasberry_hibiscus_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/wild_rasberry_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Wild Raspberry"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -93,11 +96,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/pomegranate_raspberry_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/chai_spice_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Chai Spice"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -105,11 +109,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/wild_rasberry_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/chamoline_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Chamoline"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -117,11 +122,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/chai_spice_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/lemon_ginger_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Lemon Ginger"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -129,11 +135,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/chamoline_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/mango_passionfruit_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Mango Passion Fruit"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -141,11 +148,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/lemon_ginger_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/earl_gray_decaf_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Earl Gray / Decaf"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -153,11 +161,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/mango_passionfruit_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/black_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Black Tea"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -165,11 +174,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/earl_gray_decaf_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/green_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Green Tea"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -177,11 +187,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/black_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/white_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="White Tea"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -189,11 +200,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/green_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/oolong_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Oolong Tea"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -201,11 +213,12 @@
             android:layout_height="70dp"
             android:layout_below="@+id/white_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/jasmine_green_brewed_tea_button"
             android:background="@color/colorBasic"
-            android:clickable="false"
+            android:clickable="true"
             android:text="Jasmine Green Tea"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -213,6 +226,7 @@
             android:layout_height="70dp"
             android:layout_below="@+id/oolong_brewed_tea_button"
             android:layout_centerHorizontal="true"
+            android:onClick="selectSize"
             android:stateListAnimator="@null"/>
 
     </android.widget.RelativeLayout>
